# trackmaker

./: .editorconfig  .env  .eslintignore  .eslintrc.cjs  .gitignore  .gitmodules  .oxlintrc.json  README.md  env.d.ts  eslint.config.js  index.html  index.html.br  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.cjs  proj4rs_bg.wasm  svelte.config.js  tailwind.config.cjs  tailwind.config.ts  tsconfig.app.json  tsconfig.json  typedoc.json  vite.config.js  vite.config.ts
.github/: build-tauri.yml.bak
_app/: version.json
app/: version.json
assets/: AboutView-4C-PhhNO.js  AboutView-4C-PhhNO.js.br  AboutView-71Vt_752.js  AboutView-71Vt_752.js.br  AboutView-B-m1m7Hj.js  AboutView-B-m1m7Hj.js.br  AboutView-B1Lz6dBz.js  AboutView-B1Lz6dBz.js.br  AboutView-B2aV_O1j.js  AboutView-B2aV_O1j.js.br  AboutView-B3IeWjKp.js  AboutView-B3IeWjKp.js.br  AboutView-B7VsO0Hz.js  AboutView-B7VsO0Hz.js.br  AboutView-B9llb9Wn.js  AboutView-B9llb9Wn.js.br  AboutView-BBx_Vc1i.js  AboutView-BBx_Vc1i.js.br  AboutView-BCBRLhaI.js  AboutView-BCBRLhaI.js.br  AboutView-BDkfqxDm.js  AboutView-BDkfqxDm.js.br  AboutView-BEsqq1-x.js  AboutView-BEsqq1-x.js.br  AboutView-BF3UxVh1.js  AboutView-BF3UxVh1.js.br  AboutView-BFKgW6yb.js  AboutView-BFKgW6yb.js.br  AboutView-BGOn7na1.css  AboutView-BGOn7na1.css.br  (+4966 more)
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/modules/: inet.rs  mod.rs
src-tauri/src/modules/geolocation/: converter.rs  mod.rs  providers.rs  types.rs
(+360 files in other folders)
