[package]
name = "trackmaker"
version = "0.1.0"
description = "Enabling route planning and navigation for sports activities with map marking features"
authors = ["anson2251", "lziii180511"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-rc.6", features = [] }
tauri-plugin-geolocation = "2.0.0-rc"
